--- a/public/index.html
+++ b/public/index.html
@@ -4,22 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>IFSP - Pirituba</title>
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap.css" />
-    <link rel="stylesheet" href="vendor/bootstrap/dist/js/bootstrap.min.js" />
     <link
       rel="stylesheet"
       href="vendor/bootstrap/dist/css/bootstrap-theme.css"
     />
+    <link rel="stylesheet" href="vendor/bootstrap/dist/css/bootstrap-min.js" />
   </head>
   <body class="container">
-    <div ng-view class="ng-scope"></div>
-    <script src="vendor/angular/angular.js"></script>
-    <script src="vendor/angular-route/angular-route.js"></script>
-    <script src="vendor/angular-resource/angular-resource.js"></script>
-    <script src="js/main.js"></script>
-    <script src="js/controllers/ContatosController.js"></script>
-    <script src="js/controllers/ContatoController.js"></script>
-    <script src="js/controllers/CursosController.js"></script>
-    <script src="js/controllers/CursoController.js"></script>
+    <div ng-view></div>
+    <script src="./vendor/angular/angular.js"></script>
+    <script src="./vendor/angular-route/angular-route.js"></script>
+    <script src="./vendor/angular-resource/angular-resource.js"></script>
+    <script src="./js/main.js"></script>
+    <script src="./js/controllers/ContatosController.js"></script>
+    <script src="./js/controllers/ContatoController.js"></script>
+    <script src="./js/controllers/CursosController.js"></script>
+    <script src="./js/controllers/CursoController.js"></script>
   </body>
 </html>
